--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "css-loader": "^6.7.1",
         "typescript": "4.5.5",
-        "vue": "3.2.31"
+        "vue": "3.2.31",
+        "vue-style-loader": "^4.1.3"
     },
     "devDependencies": {
         "html-webpack-plugin": "5.5.0",
