--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
+        "bootstrap-vue": "^2.22.0",
+        "bootstrap-vue-3": "^0.1.14",
         "css-loader": "^6.7.1",
         "typescript": "4.5.5",
-        "vue": "3.2.31",
+        "vue": "^3.2.31",
+        "vue-router": "^4.1.2",
         "vue-style-loader": "^4.1.3"
     },
     "devDependencies": {
