componente tabla, añadir bootstaro 5 para vue y modificar tsconfig para que lea json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
         "sourceMap": true,
         "removeComments": false,
         "suppressImplicitAnyIndexErrors": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true
     },
     "include": [
         "src",
