--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/vue-fontawesome": "^3.0.1",
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
         "bootstrap-vue": "^2.22.0",
