--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "bootstrap-vue": "^2.22.0",
         "bootstrap-vue-3": "^0.1.14",
         "css-loader": "^6.7.1",
+        "redux": "^4.2.0",
+        "redux-thunk": "^2.4.1",
         "typescript": "4.5.5",
         "vue": "^3.2.31",
         "vue-router": "^4.1.2",
