--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/vue-fontawesome": "^3.0.1",
         "@popperjs/core": "^2.11.5",
+        "@redux-devtools/core": "^3.13.1",
         "bootstrap": "^5.1.3",
         "bootstrap-vue": "^2.22.0",
         "bootstrap-vue-3": "^0.1.14",
         "css-loader": "^6.7.1",
-        "redux": "^4.2.0",
+        "redux": "4.1.2",
         "redux-thunk": "^2.4.1",
         "typescript": "4.5.5",
         "vue": "^3.2.31",
